--- a/package.json
+++ b/package.json
@@ -1,67 +1,65 @@
 {
-  "name": "@tensorflow-models/hand-pose-detection",
-  "version": "2.0.1",
-  "description": "Pretrained hand pose detection model",
-  "main": "dist/index.js",
-  "jsnext:main": "dist/hand-pose-detection.esm.js",
-  "module": "dist/hand-pose-detection.esm.js",
-  "unpkg": "dist/hand-pose-detection.min.js",
-  "jsdelivr": "dist/hand-pose-detection.min.js",
-  "types": "dist/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tensorflow/tfjs-models.git"
+  "name": "handposedetection_demo",
+  "version": "0.0.1",
+  "description": "Demo for hand pose detection api",
+  "main": "index.js",
+  "license": "Apache-2.0",
+  "private": true,
+  "engines": {
+    "node": ">=8.9.0"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@mediapipe/hands": "~0.4.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.13.0",
-    "@tensorflow/tfjs-converter": "^4.13.0",
-    "@tensorflow/tfjs-core": "^4.13.0"
-  },
-  "devDependencies": {
-    "@babel/polyfill": "^7.10.4",
-    "@mediapipe/hands": "^0.4.0",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-typescript": "^3.0.0",
-    "@tensorflow/tfjs-backend-cpu": "^4.13.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.13.0",
-    "@tensorflow/tfjs-converter": "^4.13.0",
-    "@tensorflow/tfjs-core": "^4.13.0",
-    "@types/jasmine": "~2.8.8",
-    "babel-core": "~6.26.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "jasmine": "~3.1.0",
-    "jasmine-core": "~3.1.0",
-    "karma": "~6.3.1",
-    "karma-browserstack-launcher": "~1.6.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-spec-reporter": "~0.0.32",
-    "karma-typescript": "~5.5.1",
-    "karma-typescript-es6-transform": "^5.1.0",
-    "rollup": "~2.3.2",
-    "rollup-plugin-terser": "~7.0.2",
-    "rollup-plugin-visualizer": "~3.3.2",
-    "ts-node": "~8.8.2",
-    "tslint": "~5.18.0",
-    "typescript": "~4.4.0",
-    "yalc": "~1.0.0-pre.21"
+    "@tensorflow-models/hand-pose-detection": "file:../../dist",
+    "@tensorflow/tfjs-backend-wasm": "^4.9.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.9.0",
+    "@tensorflow/tfjs-converter": "^4.9.0",
+    "@tensorflow/tfjs-core": "^4.9.0",
+    "scatter-gl": "0.0.8"
   },
   "scripts": {
-    "bundle": "rollup -c",
-    "build": "rimraf dist && tsc && yarn bundle",
-    "publish-local": "yarn build && rollup -c && yalc publish",
-    "run-browserstack": "karma start --browserstack",
-    "test-node": "NODE_PRESERVE_SYMLINKS=1 ts-node --skip-ignore --project tsconfig.test.json run_tests.ts",
-    "test": "yarn && karma start",
-    "test-ci": "yarn run-browserstack --browsers=bs_chrome_mac",
-    "build-npm": "yarn build && yarn bundle",
-    "lint": "tslint -p . -t verbose"
+    "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open",
+    "build": "cross-env NODE_ENV=production parcel build index.html --public-url ./",
+    "lint": "eslint .",
+    "build-dep": "cd ../../ && yarn && yarn build",
+    "link-core": "yalc link @tensorflow/tfjs-core",
+    "link-webgl": "yalc link @tensorflow/tfjs-backend-webgl"
   },
-  "license": "Apache-2.0",
-  "dependencies": {
-    "rimraf": "^3.0.2",
-    "tslib": "^2.6.1"
-  }
+  "browser": {
+    "crypto": false
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "clang-format": "~1.2.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "parcel-bundler": "1.12.5",
+    "parcel-plugin-static-files-copy": "^2.5.1",
+    "yalc": "~1.0.0-pre.50"
+  },
+  "resolutions": {
+    "is-svg": "4.3.1"
+  },
+  "eslintConfig": {
+    "extends": "google",
+    "rules": {
+      "require-jsdoc": 0,
+      "valid-jsdoc": 0
+    },
+    "env": {
+      "es6": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 8,
+      "sourceType": "module"
+    }
+  },
+  "eslintIgnore": [
+    "dist/"
+  ]
 }
